# pycon_2021

./: .gitignore  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
admin/: app.py
admin/templates/: individual_edit.html
admin/views/: income.py  individual.py
api/: app.py  handlers.py  individ_info.py
db/: __init__.py  individ.py
db/utils/: base.py  db_tools.py  init-db.sql  settings.py  utils.py
