[tool.poetry]
name = "wizard"
version = "1.0.0"
description = "Wizard admin"
authors = ["chatbot_dev <chatbot_dev@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

gunicorn = "~19.9.0"
sqlalchemy = ">=1.4,<=1.4.22"
psycopg2-binary = "^2.8"
flask = "^1.0"
flask-admin = "^1.5.6"
uvicorn = "^0.15.0"
fastapi = "^0.68.1"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true
exclude = ".*db/versions"

[build-system]
requires = ["poetry>=1.1.1"]
build-backend = "poetry.core.masonry.api"
