[tool.poetry]
name = "wizard"
version = "1.0.0"
description = "Wizard admin"
authors = [
    "Iya Ivanikov <rize95@icloud.com>",
    "Tinkoff Dialog System Backend Team <bds-dev@tinkoff.ru>"
    ]

[tool.poetry.scripts]
chatbot = 'cli:main_app'


[tool.poetry.dependencies]
python = "~3.7"

pyyaml = "*"
gunicorn = "~19.9.0"
fastapi = "0.61.2"
uvicorn = "^0.8.4"
click = {version = "*", optional = true}
pymorphy2 = {version = '>=0.8',extras = ['fast']}
pymorphy2-dicts = '==2.4.393442.3710985'
pymorphy2-dicts-ru = '==2.4.393658.3725883'
pymorphy2-dicts-uk = '==2.4.1.1.1460299261'
requests = '*'
yarl = "<=1.1.1"
lazy = "*"
tenacity = "*"
razdel = "^0.5.0"
fakeredis = "^1.0"
redis = "^3.3"
importlib_metadata = "^1.7.0"
pydantic = "1.8.1"
sqlalchemy = "1.3.23"
psycopg2-binary = "^2.8"
expiringdict = "^1.2"
sqlalchemy-utils = "^0.36.4"
transliterate = "^1.10"
alembic = "==1.5.8"
deprecated = "^1.2"
typer = {extras = ["all"], version = "^0.3.2"}
flask = '^1.0'
contextvars = '*'
lru-dict = "*"
flask-admin = "^1.5.6"

prometheus_client = "^0.8.0"
fastapi-utils = "^0.2.1"
timeout-decorator = "*"
typing-extensions = "^3.7.4"
sqlalchemy-utc = "^0.11.0"
cached-property = "^1.5.2"
more-itertools = "^8.8.0"
cachetools = "^4.2.2"


[tool.poetry.dev-dependencies]
pytest = ">=6.0.0"
pytest-timeout = "^1.4.2"
mypy = "*"
flake8-awesome = "<1.3"
pep8-naming = "*"
black = "^19.10b0"
isort = "*"
unify = "*"
requests-mock = '*'
pytest-mock = '*'
pytest-freezegun = "^0.3.0"
pytest-lazy-fixture = "0.6.2"
pytest-custom_exit_code = "^0.3.0"
sqlalchemy-stubs = "^0.3.0"
tmuxp = "*"
filelock = "^3.0.12"
types-pytz = "^0.1.1"
types-werkzeug = "^1.0.1"
types-flask = "^1.1.0"
types-requests = "^0.1.11"
types-redis = "^3.5.1"
types-pyyaml = "^5.4.0"
types-orjson = "^0.1.1"
types-cachetools = "^0.1.9"
selenium = "^3.141.0"
allure-pytest = "^2.9.43"
pytest-xdist = "^2.3.0"
alchemy-mock = "^0.4.3"

[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = true
exclude = ".*db/versions"

[build-system]
requires = ["poetry>=1.1.1"]
build-backend = "poetry.masonry.api"
